--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -125,7 +125,10 @@ input, select, textarea {
 		@media screen and (max-width: 1680px) {
 
 			body, input, select, textarea {
-				font-size: 13pt;
+				/*
+	               EDIT: Default 13pt
+                */
+                font-size: 13pt;
 			}
 
 		}
@@ -133,7 +136,7 @@ input, select, textarea {
 		@media screen and (max-width: 1280px) {
 
 			body, input, select, textarea {
-				font-size: 12pt;
+				font-size: 14pt;
 			}
 
 		}
